# beans-zero

./: .gitignore  README.md  beans_datasets.yml  beans_zero_dataset_config.json  cli.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: pre-commit.yml  pythonapp.yml
beans_zero/: benchmark.py  config.py  evaluate.py  metrics.py  model.py  parse_text_outputs.py  post_processor.py  pretty_print_dataset.py  utils.py
tests/consistency/: test_docstrings.py
tests/integration_tests/: test_benchmark.py  test_compute_metrics.py
tests/integration_tests.py/: test_compute_metrics.py
tests/unittests/: test_evaluate.py  test_metrics.py  test_postprocessor.py  test_utils.py
