[project]
name = "beans-zero"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "datasets>=3.3.2",
    "pycocoevalcap>=1.2",
    "pydantic>=2.10.6",
    "pytest>=8.3.5",
    "scikit-learn>=1.1.1",
    "xgboost>=1.6.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["beans_zero"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
pythonpath = [
  ".", "beans_zero",
]

[tool.ruff]
line-length = 120
exclude = [
  "**/*.ipynb"
]

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = [
  "E4",
  "E7",
  "E9",
  "F", # Flake8
  "I", # isort
]
